# nyeok-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  release.sh
app/: main.py  models.py  requirements.txt  response_code.py
app/auth/: signup.py
app/database/: db.py  records.py  user_crud.py
app/network/: routes_api.py
app/routers/: auth.py
backend-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend-service/backend_service/: .env.prod  env.py  main.py  models.py
backend-service/backend_service/outbound/: routes_api.py
database-core/: pyproject.toml
database-core/database_core/: tables.py
database-core/nyeok_database_core/: db.py  tables.py  with_enforcer.py
database-setup/: Dockerfile  pyproject.toml  requirements.txt
database-setup/database_setup/: alembic.ini  env.py  main.py  temp.py
database-setup/database_setup/alembic/: env.py
database-setup/database_setup/alembic-scripts/: env.py
database-setup/database_setup/alembic-scripts/versions/: 7ea8425668d0_place_table_add_coordinate_column.py  8d16c0508c08_place_table_use_geography_instead_of_.py
database-setup/database_setup/alembic/versions/: 255d354c72cc_please.py  367de4fb88e6_placetable.py
database-setup/database_setup/tourapi/: AreaBasedListAPI.py  AreaCode.py  AreaCodeAPI.py  AreaCodeGenerator.py  BaseAPI.py  ContentTypeId.py  types.py
database-setup/database_setup/utils/: class_with_int.py  json_utils.py  temp.py  temp2.py  temp3.py
k8s/: .gitignore  README.md
k8s/base/: backend.yaml  kustomization.yaml  nginx-reverse-proxy.yaml  nginx.conf  postgres.yaml
k8s/overlays/gke/: backend-spot-patch.yaml  cloudflare-tunnel.yaml  kustomization.yaml
k8s/overlays/minikube/: ingress.yaml  kustomization.yaml  nginx-welcome.yaml  nginx.conf  nginx.yaml
nyeok-backend/network/: routes_api.py
nyeok-backend/routers/: auth.py
nyeok-dotenv/: README.md  coverage_report.sh  pyproject.toml
nyeok-dotenv/nyeok_dotenv/: DirecoryChanger.py  EnvBase.py  exampleEnv.py
nyeok-dotenv/tests/: .env.dev  .env.prod  .secret  SampleClass.py  SimpleClass.py  conftest.py  sample_test.py  test_basic.py  test_directory.py  test_errors.py  test_load_enum.py
nyeok-dotenv/tests/dir1/: .env.dev  .env.prod
nyeok-dotenv/tests/dir2/: .env.dev  .env.prod
scripts/: alembic_generate.sh  alembic_status.sh  backend-service.sh  database-setup.sh  database_setup.sh  dockerimage.sh  fastapi.sh  runpoetry.sh  runpy.sh
scripts-poetry-monorepo/: poetry_build.sh  poetry_install.sh  poetry_lock_no_update.sh  poetry_lock_update.sh  projects.sh  replace_path_deps.sh
scripts/alembic/: alembic_commit.sh  alembic_status.sh  commit.sh  status.sh
scripts/kubernetes/: apply.sh  start_local_database.sh  start_minikube.sh
scripts/publish/: backend-service.sh  database-core.sh  database-setup.sh
