[tool.poetry]
name = "database-core"
version = "0.1.0"
description = ""
authors = ["kimkun07 <kimkun07@naver.com>"]
readme = "README.md"

[tool.poetry-monorepo.deps]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.32"
psycopg2 = "^2.9.9"
geoalchemy2 = "^0.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
