[tool.poetry]
name = "database-setup"
version = "0.2.2"
description = ""
authors = ["kimkun07 <kimkun07@naver.com>"]
readme = "README.md"

[tool.poetry-monorepo.deps]

[tool.poetry.dependencies]
python = "^3.12"
nyeok-database-core = { path = "../database-core", develop = true }
alembic = "^1.13.2"
pydantic = "^2.8.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
